--- a/index.html
+++ b/index.html
@@ -141,9 +141,9 @@
         <div class="col">
           <img src="./src/pc_index/PSD.png" class="phone" />
           <h1 class="content-h1">Обо мне</h1>
-          <h2 class="content-h2-mobile-align">немного инфы</h2>
+          <h2 class="content-h2-mobile-align" style="padding-bottom: 1rem">немного инфы</h2>
           <div class="about-me-pc-bottom d-flex flex-row">
-            <h1>Я</h1>
+            <h1 style="font-size: clamp(1rem, 14vh, 30rem) !important">Я</h1>
             <h2>занимаюсь WEB-разработкой<br />уже несколько лет</h2>
           </div>
         </div>
