--- a/404.html
+++ b/404.html
@@ -39,7 +39,7 @@
       <div class="col-sm-4 m-auto">
         <div class="card" style="width: 90%; max-width: 50vh; margin: 0 auto; float: center">
           <div class="card-body" style="padding-top: 6vh">
-            <img src="./src/sub/404cat.webp" style="width: 100%; margin-top: -10rem" />
+            <img src="https://kotikov.pages.dev/src/sub/404cat.webp" style="width: 100%; margin-top: -10rem" />
             <h5 class="card-title" style="font-size: 10rem; text-align: center">
               <div class="container">
                 <p class="glitch">404</p>
