--- a/IE-warning.html
+++ b/IE-warning.html
@@ -23,6 +23,7 @@
     </div>
   </body>
   <script>
+    <!-- It's a function that checks the version of the browser. -->
     function msieversion() {
       var ua = window.navigator.userAgent;
       var msie = ua.indexOf("MSIE ");
