--- a/index.html
+++ b/index.html
@@ -395,7 +395,7 @@
   </body>
   <script>
     const url = `https://api.thecatapi.com/v1/images/search`;
-    const api_key = "live_wx7MLHXsoALnQq6wejxk8O3nHEa5EASPKaKb35ezpc3tBhqKSx7vX1cTEMQ3FA4F";
+    const api_key = API_KEY;
 
     fetch(url, {
       headers: {
