--- a/index.html
+++ b/index.html
@@ -371,11 +371,11 @@
           </div>
         </div>
       </div>
-      <div class="cat-maincontent todo">
+      <!-- <div class="cat-maincontent todo">
         <div id="grid" class="content" style="overflow: hidden">
           <h1 class="content-h1 cat-h1" style="float: right; width: 50%">Рандом пикча</h1>
         </div>
-      </div>
+      </div> -->
       <div class="content" style="position: relative">
         <h1 class="content-h1" style="padding-top: 5rem">Source code</h1>
         <div class="card">
@@ -393,7 +393,7 @@
       </div>
     </div>
   </body>
-  <script>
+  <!-- <script>
     const url = `https://api.thecatapi.com/v1/images/search`;
     const api_key = production.env.API_KEY;
 
@@ -422,5 +422,5 @@
       .catch(function (error) {
         console.log(error);
       });
-  </script>
+  </script> -->
 </html>
