--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
       </div>
     </div>
 
-    <div class="content about-me mb-lg-5" style="position: relative">
+    <div class="content-special about-me mb-lg-5" style="position: relative">
       <div class="window">
         <div class="titlebar">
           <div class="buttons">
