--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="./css/pc/pc.css" rel="stylesheet" />
     <link href="./css/pc/window.css" rel="stylesheet" />
+
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.2.3/js/bootstrap.min.js"
       integrity="sha512-1/RvZTcCDEUjY/CypiMz+iqqtaoQfAITmNSJY17Myp4Ms5mdxPS5UV7iOfdZoxcGhzFbOm6sntTKJppjvuhg4g=="
@@ -58,6 +59,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+
     <title>Арсений Котиков</title>
   </head>
   <body>
@@ -168,7 +170,7 @@
             <div class="col">
               <img src="./src/pc_index/PSD.png" class="phone" />
               <h1 class="content-h1 inverted">Обо мне</h1>
-              <h2 class="inverted" style="padding-bottom: 1rem">немного инфы</h2>
+              <h2 class="inverted about-me-text-align" style="padding-bottom: 1rem">немного инфы</h2>
               <div class="about-me-pc-bottom d-flex flex-row">
                 <h1 class="inverted" style="font-size: clamp(1rem, 14vh, 30rem) !important">Я</h1>
                 <h2 class="inverted">занимаюсь WEB-разработкой<br />уже несколько лет</h2>
